--- a/Importando_o_Enem_pro_Colab.ipynb
+++ b/Importando_o_Enem_pro_Colab.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Importando o Enem pro Colab.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "mount_file_id": "15H-hIZY6WEvytKYv9v-8O9RW_vxQvFHY",
-      "authorship_tag": "ABX9TyMOvIIRKjjdLQsUki0Gt1/P",
+      "authorship_tag": "ABX9TyMd6PW0bAGt4/z6LYPUw5C8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,11 +70,11 @@
       },
       "source": [
         "import os\n",
-        "os.environ['KAGGLE_CONFIG_DIR'] = \"/content/gdrive/My Drive/Kaggle\"\n",
+        "os.environ['KAGGLE_CONFIG_DIR'] = \"/content/drive/My Drive/Kaggle\"\n",
         "\n",
         "# /content/gdrive/My Drive/Kaggle é onde salvamos o kaggle.json"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -93,7 +94,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "F3E--OPmrLpN",
-        "outputId": "64fea3d1-42ff-4b1d-81ad-2db96290a06e",
+        "outputId": "c68168a1-5d75-4cf8-ac90-29df3c6d57f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -106,12 +107,12 @@
         "\n",
         "# Ou outra pasta que preferir"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            ".\n"
+            "/content\n"
           ],
           "name": "stdout"
         }
@@ -136,10 +137,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "J6iWxpiNqci-",
-        "outputId": "f8a54ee2-69cc-4c8c-fdbf-8b6008502520",
+        "outputId": "51857ae7-b9dc-45d4-d961-ab9cc5c6c28e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 107
+          "height": 64
         }
       },
       "source": [
@@ -156,10 +157,8 @@
         {
           "output_type": "stream",
           "text": [
-            "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /content/gdrive/My Drive/Kaggle/kaggle.json'\n",
-            "Downloading enem-2019.zip to /content/gdrive/My Drive/Kaggle\n",
-            " 99% 673M/679M [00:04<00:00, 177MB/s]\n",
-            "100% 679M/679M [00:04<00:00, 157MB/s]\n"
+            "Downloading enem-2019.zip to /content\n",
+            " 62% 422M/679M [00:17<00:07, 38.4MB/s]"
           ],
           "name": "stdout"
         }
