--- a/Dicionário_de_Dados.ipynb
+++ b/Dicionário_de_Dados.ipynb
@@ -6,7 +6,7 @@
       "name": "Dicionário de Dados.ipynb",
       "provenance": [],
       "mount_file_id": "1ySrQn6I4rkxijz1HzXzsZfEMW3rTh-_u",
-      "authorship_tag": "ABX9TyPbQUWgM/J5mpVy6sVoL3fY",
+      "authorship_tag": "ABX9TyPzNDiVn/jNXgswMKm4glPl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
       },
       "source": [
         "# for coluna in dados.columns:\n",
-        "import json\n",
+        "import requests\n",
         "import ast\n",
         "import pandas as pd\n",
         "\n",
@@ -80,7 +80,7 @@
         "# ou de entender os números. Mas durante o processamento, prefira\n",
         "# usar os dados codificados mesmo"
       ],
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +177,7 @@
         "\n",
         "# dict_enem"
       ],
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
